--- a/src/assets/scss/_home.scss
+++ b/src/assets/scss/_home.scss
@@ -67,14 +67,25 @@ li.todo-list {
 	border: 0;
 	margin: 22px 0;
 }
+
 .ui-sortable-placeholder.position-highlight {
 	background-color: var(--bg);
-	height: 30px;
 	border-radius: 8px;
 	border: 0;
 	margin: 12px 0;
 	box-shadow: inset 0 0px 20px #10293827;
+	border: 2px dashed #10293885;
 }
+[data-smeta] .ui-sortable-placeholder.position-highlight {
+	height: 30px;
+}
+[data-stages] .ui-sortable-placeholder.position-highlight {
+	height: 30px;
+}
+[data-position] .ui-sortable-placeholder.position-highlight {
+	height: 30px;
+}
+
 .todo-list {
 	// overflow-x: hidden !important;
 	overflow: visible;
@@ -151,7 +162,6 @@ li.todo-list {
 	}
 	&__name-select {
 		margin: 0;
-		transform: translate(0px, -1px);
 	}
 	&__btn {
 		display: flex;
@@ -226,11 +236,11 @@ li.todo-list {
 
 		& .select2-selection {
 			padding: 0;
-			font-size: 14px;
 		}
 
 		& .select2-selection__rendered {
 			padding: 0;
+			margin-top: 0;
 		}
 
 		& .select2-container--default .select2-selection--single {
