--- a/src/assets/scss/_style.scss
+++ b/src/assets/scss/_style.scss
@@ -3,7 +3,7 @@
 @import url("https://fonts.googleapis.com/css?family=Onest:regular,500,600,700&display=swap");
 
 :root {
-	--font-RF: "Roboto Flex";
+	--font-RF: "Roboto Flex", Arial, Helvetica, sans-serif;
 	--font-Onset: "Onest";
 	--c-white: #fff;
 	--c-black: #102938;
@@ -37,9 +37,8 @@
 // Подключение иконочных шрифтов ==============================================================================================================================================================================================================================================================================
 // Подключить если есть файл иконочного шрифта
 //@import "fonts/icons";
-
 // Шрифт по умолчанию ==============================================================================================================================================================================================================================================================================
-$fontFamily: var(--font-Onset);
+$fontFamily: var(--font-Onset), Arial, Helvetica, sans-serif;
 $fontSize: 16px; // где 14(px) - размер шрифта по умолчанию из макета
 
 // Основные цвета
