--- a/src/assets/scss/_icon.scss
+++ b/src/assets/scss/_icon.scss
@@ -213,7 +213,7 @@
 	display: inline-block;
 	margin-right: 16px;
 	width: 16px;
-	height: 16px;
+	height: 100%;
 
 	&::before,
 	&::after {
@@ -224,6 +224,16 @@
 		top: 0;
 		left: 0;
 		transition: all 0.3s ease 0s;
+		[data-smeta-item] & {
+			top: 12px;
+		}
+		[data-stage-item] & {
+			top: 9px;
+		}
+		[data-position-item] & {
+			top: 50%;
+			transform: translate(0px, -50%);
+		}
 	}
 	&::before {
 		background-image: url(../img/icons/IconDrag.svg);
@@ -233,7 +243,7 @@
 		content: "";
 		background: url("../img/icons/IconHoverDrag.svg") 0 0 no-repeat;
 		opacity: 0;
-		top: 2px;
+
 		visibility: hidden;
 	}
 	@media (any-hover: hover) {
