feat: добавил поле для ошибки

--- a/src/assets/scss/_client.scss
+++ b/src/assets/scss/_client.scss
@@ -22,7 +22,7 @@
 	// .block-item__contetn
 
 	&__contetn {
-		display: flex;
-		column-gap: 8px;
+		// display: flex;
+		// column-gap: 8px;
 	}
 }
